--- a/index.html
+++ b/index.html
@@ -54,6 +54,44 @@
           </li>
         </ul>
       </section>
+      <section class="works">
+        <h2>Featured works</h2>
+        <ul>
+          <li>
+            <p>
+              <img
+                src="src/images/dashboard.png"
+                alt="Imagem de um dashboard" />
+            </p>
+            <h3>Designing Dashboards</h3>
+            <p class="info"><span>2020</span> Dashboards</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+          <li>
+            <img src="src/images/mulher-rosa.png" alt="Vibrant Portraits" />
+            <h3>Vibrant Portraits of 2020</h3>
+            <p class="info"><span>2018</span> Illustration</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <p>
+          <a href="#"><span class="fa-brands fa-square-facebook"></span></a>
+          <a href="#"><span class="fa-brands fa-instagram"></span></a>
+          <a href="#"><span class="fa-brands fa-twitter"></span></a>
+          <a href="#"><span class="fa-brands fa-linkedin"></span></a>
+        </p>
+        <p>Copyright ©2020 All rights reserved</p>
+      </footer>
     </main>
   </body>
 </html>
