--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Works</a></li>
+          <li><a href="index.html">Blog</a></li>
+          <li><a href="ft-works.html">Works</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -83,15 +83,15 @@
           </li>
         </ul>
       </section>
-      <footer>
-        <p>
-          <a href="#"><span class="fa-brands fa-square-facebook"></span></a>
-          <a href="#"><span class="fa-brands fa-instagram"></span></a>
-          <a href="#"><span class="fa-brands fa-twitter"></span></a>
-          <a href="#"><span class="fa-brands fa-linkedin"></span></a>
-        </p>
-        <p>Copyright ©2020 All rights reserved</p>
-      </footer>
     </main>
+    <footer>
+      <p>
+        <a href="#"><span class="fa-brands fa-square-facebook"></span></a>
+        <a href="#"><span class="fa-brands fa-instagram"></span></a>
+        <a href="#"><span class="fa-brands fa-twitter"></span></a>
+        <a href="#"><span class="fa-brands fa-linkedin"></span></a>
+      </p>
+      <p>Copyright ©2020 All rights reserved</p>
+    </footer>
   </body>
 </html>
