--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
     </header>
     <main>
       <section class="banner">
-        <img src="src/images/john.png" alt="Foto do John" />
-        <h1>Hi, I am John, Creative Technologist</h1>
-        <p>
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet.
-        </p>
-        <p><button>Download Resume</button></p>
+        <div class="imagem">
+          <img src="src/images/john.png" alt="Foto do John" />
+        </div>
+        <div class="texto">
+          <h1>Hi, I am John, Creative Technologist</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <p><button>Download Resume</button></p>
+        </div>
       </section>
       <section class="posts">
         <h2>Recent posts</h2>
         <ul>
           <li>
             <h3>Making a design system from scratch</h3>
-            <p>12 Feb 2020 | Design, Pattern</p>
+            <p class="data">12 Feb 2020 | Design, Pattern</p>
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do
               amet sint. Velit officia consequat duis enim velit mollit.
@@ -45,7 +49,7 @@
           </li>
           <li>
             <h3>Creating pixel perfect icons in Figma</h3>
-            <p>12 Feb 2020 | Design, Pattern</p>
+            <p class="data">12 Feb 2020 | Design, Pattern</p>
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do
               amet sint. Velit officia consequat duis enim velit mollit.
@@ -72,7 +76,9 @@
             </p>
           </li>
           <li>
-            <img src="src/images/mulher-rosa.png" alt="Vibrant Portraits" />
+            <p>
+              <img src="src/images/mulher-rosa.png" alt="Vibrant Portraits" />
+            </p>
             <h3>Vibrant Portraits of 2020</h3>
             <p class="info"><span>2018</span> Illustration</p>
             <p>
